k8s/rider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rider-service
  namespace: metro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rider-service
  template:
    metadata:
      labels:
        app: rider-service
    spec:
      containers:
        - name: rider-service
          # image: rider-rider-service:latest
          # imagePullPolicy: IfNotPresent
          image: inevertheless/rider_microservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: rider-service
  namespace: metro
spec:
  selector:
    app: rider-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
      name: http
  type: ClusterIP
